- complete refresh swagger
