# resources/Templates/ModelDtos/SearchResponseDtoTemplate.blade.php
@@ -1,9 +1,5 @@
 namespace App\Dto\ApiDto;
-
 use Spatie\DataTransferObject\FlexibleDataTransferObject;
-use \Spatie\DataTransferObject\DataTransferObjectCollection;
-
-use App\Dto\ModelDto\{{ $model_name }}Dto;
 
 class {{ $action_name }}{{ $model_name }}ResponseDto extends FlexibleDataTransferObject
 {
@@ -15,34 +11,7 @@ class {{ $action_name }}{{ $model_name }}ResponseDto extends FlexibleDataTransfe
         $result = new self();
         $result->total = $searchResult->total;
         $result->data = {{ $action_name }}{{ $model_name }}ResponseCollection::create($searchResult->data);
-
         return $result;
-    }
-}
-
-class {{ $action_name }}{{ $model_name }}ResponseItem extends {{ $model_name }}Dto
-{
-
-}
-
-class {{ $action_name }}{{ $model_name }}ResponseCollection extends DataTransferObjectCollection
-{
-    public function current(): {{ $action_name }}{{ $model_name }}ResponseItem
-    {
-        return parent::current();
-    }
-
-    public static function create($data = null): ?{{ $action_name }}{{ $model_name }}ResponseCollection
-    {
-        if(is_null($data)) return null;
-
-        $items = [];
-        foreach($data as $srcItem) {
-            $destItem = (array) $srcItem;
-            array_push($items, $destItem);
-        }
-
-        return new static({{ $action_name }}{{ $model_name }}ResponseItem::arrayOf($items));
     }
 }
 
@@ -56,18 +25,7 @@ class {{ $action_name }}{{ $model_name }}ResponseCollection extends DataTransfer
  *         @OA\Property(property="code", type="integer"),
  *         @OA\Property(property="locale", type="string"),
  *         @OA\Property(property="message", type="string"),
- *         @OA\Property(
- *              property="data", 
- *              type="object", 
- *              properties = {
- *                  @OA\Property(property="id", type="string"),
-@foreach ($fillable as $field)
- *                  @OA\Property(property="{{ $field }}", type="string"),
-@endforeach
- *                  @OA\Property(property="created_at", type="string"),
- *                  @OA\Property(property="updated_at", type="string")
- *              }
- *         ),
+ *         @OA\Property(property="data", type="object", ref="#/components/schemas/{{ $action_name }}{{ $model_name }}ResponseItem"),
  *     }
  * )
  */
